database and new features (account managment, ranking & achievmentes)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "startDb": "nodemon indexDb.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,8 +16,11 @@
   "dependencies": {
     "angular": "^1.6.6",
     "angular-route": "^1.6.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2",
     "nodemon": "^2.0.16",
     "path": "^0.12.7",
     "sweetalert2": "^11.4.26"
