--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "startDb": "nodemon indexDb.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "keywords": [
     "cards"
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "^1.6.6",
     "angular-route": "^1.6.6",
+    "bootstrap": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -24,5 +25,9 @@
     "nodemon": "^2.0.16",
     "path": "^0.12.7",
     "sweetalert2": "^11.4.26"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.6.6",
+    "jest-cli": "^21.2.1"
   }
 }
